// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`googlemap snapshot: CustomWidth 1`] = `
<div>
  <div
    class="MuiBox-root css-1ll6y2t"
  >
    <div
      class="MuiBox-root css-155j88v"
    >
      地図を読み込み中...
    </div>
  </div>
</div>
`;

exports[`googlemap snapshot: Default 1`] = `
<div>
  <div
    class="MuiBox-root css-ov73e1"
  >
    <div
      class="MuiBox-root css-155j88v"
    >
      地図を読み込み中...
    </div>
  </div>
</div>
`;

exports[`googlemap snapshot: Tall 1`] = `
<div>
  <div
    class="MuiBox-root css-hk0lfs"
  >
    <div
      class="MuiBox-root css-155j88v"
    >
      地図を読み込み中...
    </div>
  </div>
</div>
`;
